# NeuralForceField

./: .gitignore  .gitmodules  .pre-commit-config.yaml  GraphFP_qm9.py  ISSUES.md  LICENSE  MD.py  README.md  Untitled.ipynb  conftest.py  ecfp.py  environment.yaml  environment.yml  environment_cpu.yml  ethanol.ipynb  graphs.py  layers.py  model_att.py  models.py  module.py  neural_hessian.ipynb  par.json  pyproject.toml  query.py  query_glyme.py  scatter.py  schnet.py  setup.py  tensorgrad.py  test.ipynb  test.txt  test_att.ipynb  testlucie.py  train.py  util.py
.github/workflows/: python-app.yml
archive/: job.sh  schnet.py  train.py
datbase_scripts/: query.py  query_coc.py
diffmd/: .diffeqs.py.swp  diffeqs.py  interface.py  mdwrapper.py  solver_base.py  solvers.py  system.py
docs/: conf.py  index.rst
docs/modules/: data.rst  index.rst
examples/: 01_training.ipynb  02_ase.ipynb  03_excited_training.ipynb  04_md.ipynb  BulkSimulations_tutorial_1_build_CG_dataset.ipynb  BulkSimulations_tutorial_2_train_and_dynamics.ipynb  create_dataset.ipynb  data_gathering.py  dataset.pth.tar  dbsetting.py  multi_task_training.ipynb  multitask_dataset.pth.tar  testing.ipynb  tutorial.ipynb
examples/data/: dataset.pth.tar  ethanol_ccsd_t-train.npz  sf_tddft_bhhlyp.pickle
log/test_02252155/: par.json
log/test_02252208/: par.json
log/test_02252210/: par.json
log/test_02252211/: par.json
log/test_02252212/: par.json
log/test_02252213/: log.csv  par.json
nff/: crystals.py
nff.egg-info/: PKG-INFO
nff/analysis/: Attribution.py  __init__.py  attribution.py  attribution_deprecate.py  cp3d.py  loss_plot.py  mpl_settings.py  parity_plot.py  roce.py  run.py
nff/data/: __init__.py  crystals.py  dataset.py  descriptors.py  features.py  fp_cluster.py  graphs.py  graphs_changed.py  loader.py  mol_graph.py  parallel.py  sampling.py  sparse.py  stats.py  test.py  tests.py  topology.py  utils.py
nff/hyperparams/: run_sigopt.py  sigopt_ci.py
nff/hypopt/: README.md  data.py  eval.py  feats.py  hyp_data.py  hyp_params.py  hyp_sigopt.py  hyp_train.py  io.py  params.py  run_sigopt.py  train.py
nff/io/: __init__.py  ase.py  ase_ax.py  ase_calcs.py  ase_utils.py  bias_calculators.py  chemprop.py  chgnet.py  cprop.py  gmm.py  mace.py  openmm_calculators.py  potential.py  tests.py
nff/md/: TI.py  __init__.py  colvars.py  cv.py  ground.trj  neuralmd.py  nms.py  npt.py  nve.py  nvt.py  nvt_ax.py  special_thermostats.py  test.py  utils.py  utils_ax.py  zn.pickle  zn_small.pickle
nff/nn/: __init__.py  activations.py  glue.py  graphconv.py  graphop.py  group.py  layers.py  model_att.py  models.py  modules.py  modules_old.py  parser.py  tensorgrad.py  utils.py
nff/opt/: algos.py
nff/qm/: __init__.py
nff/reactive_tools/: __init__.py  ev_following.py  kabsch.py  neb.py  nms.py  reactive_langevin.py  utils.py
nff/tests/: conftest.py  dynamics_test.py  test_ase.py  test_excited_states_training.py  test_training.py
nff/train/: __init__.py  attention.py  chgnet.py  evaluate.py  loss.py  metrics.py  parallel.py  train.py  trainer.py  trainer_mod.py  transfer.py  uncertainty.py
nff/utils/: __init__.py  cellfilters.py  confgen.py  confs.py  constants.py  cuda.py  data.py  data_to_yml.py  dispersion.py  elec_config.json  fast_attention.py  features.py  functions.py  geom.py  htvs.py  misc.py  prediction_chk.py  scatter.py  tensorgrad.py  tools.py  xyz2mol.py
notebooks/: graph_feature.ipynb  neural_hessian.ipynb  sample.ipynb  test-db.ipynb  test.ipynb  test_att.ipynb  tutorial-zeolite.ipynb  tutorial.ipynb  validate_neural.ipynb
scripts/: add_compressed_feats.py  add_compressed_feats.sh  chemprop_sigopt.py  cluster_fps.json  cluster_fps.py  cluster_fps.sh  cluster_fps_engaging.json  cluster_fps_engaging.sh  conf_idx_parallel.py  convert_data.py  convert_data.sh  dataset_from_pickles.py  evaluate_nff.py  evalute_nff.py  export_covid_nbrs.py  featurize.py  final_8_splits.sh  get_conf_idx.py  make_bwfp.py  make_bwfp_jobs.py  make_bwfp_model_jobs.py  make_nbr_jobs.py  make_summary_dic.py  nff_train.py  parallel_jobs.py  regroup_datasets.py  sample_from_crest.py  save_bond_nbrs.py  save_rdmols.py  save_rdmols.sh  select_confs.sh  train_chgnet_nff.py  train_excited.py  train_nff.py
scripts/confgen/: make_confs.py  make_confs.sh  summary.json  test.csv
scripts/cp3d/: README.md  chemprop_sigopt.py  choose_samples.py  dataset_from_pickles.py  dset_from_pickles.py  dset_from_pickles.sh  final_8_splits.sh  grid_search.py  grid_search_heads.py  save_rdmols.py  trim_confs.sh
scripts/excited/: big_holdout_split.json  big_random_split.json  condense.py  condense.sh  job_info.json  lin_stoich_190_70.json  make_dset.py  make_dset.sh  split.py  split.sh  split_info.json  train.py  train_parallel.py  train_parallel.sh  train_parallel_rand.sh  train_single.py  train_single.sh
scripts/forceconv/: MD17data.py  energy_conservation.ipynb  force_polar.py  forceconv.py  forcedime.py  forcepai.py  painn_test.ipynb  run_fconv.py  run_fdime.py  run_fpai.py  run_fpai_polar.py  run_painn.py  test_ForcePai.ipynb  train.py
scripts/model_params/: chgnet_nff.yaml  scaleshiftmace_nff.yaml
tutorials/: 01_training-SIGOPT.ipynb  01_training.ipynb  02_ase.ipynb  03_excited.ipynb  03_excited_training.ipynb  03_md.ipynb  04_excited.ipynb  04_md.ipynb  04_transfer.ipynb  05_dimenet.ipynb  05_transfer.ipynb  06_autopology.ipynb  06_cp3d.ipynb  06_cp3d_dataset.ipynb  06_dimenet.ipynb  07_cp3d.ipynb  07_dimenet.ipynb  07_evaluate_with_htvs.ipynb  08_conformers.ipynb  08_dimenet.ipynb  08_reactive_md.ipynb  09_featurized_data.ipynb  09_painn.ipynb  09_reactive_md.ipynb  10_energy_pretraining.ipynb  10_painn.ipynb  10_tully_namd.ipynb  11_spooky_net.ipynb  11_zn_namd.ipynb  12_spooky_painn.ipynb  12_voxel_train.ipynb  13_NAMD.ipynb  13_soap_train.ipynb  13_tully_NAMD.ipynb  13_tully_namd.ipynb  14_hydro_train.ipynb  14_zn_namd.ipynb  15_nff_md17_dataset.ipynb  15_whim_train.ipynb  16_UmbrellaSampling_and_ScansWithHarmonicConstraints.ipynb  (+12 more)
tutorials/data/: autopology_demonstration.pth.tar  azo_coords.json  zn_info.json  (+12 more)
(+777 files in other folders)
